/*
 * Copyright 2019 Marco Helmich
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package pb;

message Warehouse {
  // A warehouse has only one primary key
  string id = 1;

  // The following are informational fields as defined in TPC-C standard
  string name = 11;
  string street_1 = 12;
  string street_2 = 13;
  string city = 14;
  string state = 15;
  string zip = 16;

  // The following are income records as specified in TPC-C standard
  double tax = 20;
  double year_to_date = 21;
}

message District {
  // A district has one primary key and one parent (foreign) key for the
  // warehouse it belongs to
  string id = 1;
  string warehouse_id = 2;

  // The following are informational fields for a district as defined by the
  // TPC-C standards
  string name = 10;
  string street_1 = 11;
  string street_2 = 12;
  string city = 13;
  string state = 14;
  string zip = 15;

  // The following are income records as specified in the TPC-C standard
  double tax = 20;
  double year_to_date = 21;
  int32  next_order_id = 22;
}

message Customer {
  // A customer has one primary key, one parent (foreign) key for the district
  // it belongs to and one grandparent (foreign) key for the warehouse the
  // district it is in belongs to
  string id = 1;
  string district_id = 2;
  string warehouse_id = 3;

  // The following are informational fields for a customer as defined by the
  // TPC-C standards
  string first = 10;
  string middle = 11;
  string last = 12;
  string street_1 = 13;
  string street_2 = 14;
  string city = 15;
  string state = 16;
  string zip = 17;

  // The following are income records as specified in the TPC-C standard
  int32  since = 20;
  string credit = 21;
  double credit_limit = 22;
  double discount = 23;
  double balance = 24;
  double year_to_date_payment = 25;
  int32  payment_count = 26;
  int32  delivery_count = 27;

  // The following is an data field for entering miscellany
  bytes data = 30;
}

message NewOrder {
  // A new order has one primary key, one parent (foreign) key for the district
  // it originated in, and one grandparent (foreign) key for the warehouse
  // the district it originated in belongs to
  string id = 1;
  string district_id = 2;
  string warehouse_id = 3;
}

message Order {
  // An order has one primary key, one parent (foreign) key for the customer
  // that originated the order, one grandparent (foreign) key for the district
  // that customer is in, and one grandparent (foreign) key for the district's
  // warehouse
  string id = 1;
  string district_id = 2;
  string warehouse_id = 3;
  string customer_id = 4;

  // The following are informational fields for an order as defined by the
  // TPC-C standards
  double entry_date = 10;
  int32 carrier_id = 11;
  int32 order_line_count = 12;
  bool  all_items_local = 13;

  // Embedding OrderLines into Order (by reference). Kind of hackish. (Alex)
  repeated uint64 order_line_ptr = 14;
}


message OrderLine {
  // An order line has a foreign key for the order it belongs to, the district
  // the order line occurs in, the warehouse that district belongs to,
  // which item is being ordered and which supply warehouse it is being
  // taken from
  string  order_id = 1;
  string  district_id = 2;
  string  warehouse_id = 3;
  string  item_id = 4;
  string  supply_warehouse_id = 5;

  // The following are informational fields for an orderline as defined by the
  // TPC-C standards
  int32  number = 10;
  double delivery_date = 11;
  int32  quantity = 12;
  double amount = 13;
  bytes district_information = 14;
}

message Item {
  // An item has only one primary key
  string id = 1;

  // The following are informational fields for an item as defined by the
  // TPC-C standards
  string name = 10;
  double price = 11;

  // The following is an data field for entering miscellany
  bytes data = 20;
}

message Stock {
  // A stock has one primary key (the item it represents) and one
  // foreign key (the warehouse it is in)
  string id = 1;
  string item_id = 2;
  string warehouse_id = 3;

  // The following are informational fields for a stock as defined by the
  // TPC-C standards
  int32  quantity = 10;
  repeated bytes  districts = 11;
  int32  year_to_date = 12;
  int32  order_count = 13;
  int32  remote_count = 14;

  // The following is an data field for entering miscellany
  bytes data = 20;
}

message History {
  // A history object contains keys for the customer that originated the
  // item, which district and warehouse it was in, and which district and
  // warehouse the customer belonged to
  string customer_id = 1;
  string district_id = 2;
  string warehouse_id = 3;
  string customer_district_id = 4;
  string customer_warehouse_id = 5;

  // The following are informational fields for a history as defined by the
  // TPC-C standards
  double date = 10;
  double amount = 11;

  // The following is an data field for entering miscellany
  bytes data = 20;
}
